@@ -1,33 +1,39 @@
-### ProgressBar和ProgressIndicator进度显示
+---
+lang: zh-CN
+title: ProgressBar和ProgressIndicator进度显示
+---
 
-#### ProgressBar
+
+# ProgressBar和ProgressIndicator进度显示
+
+## ProgressBar
 
 * 创建进度条`ProgressBar progressBar = new ProgressBar();`
 * 设置进度`progressBar.setProgress(0.5);`
 * 设置长度宽度
-
-```java
-progressBar.setPrefWidth(500);
-progressBar.setPrefHeight(10.0);
-```
+    
+    ```java
+    progressBar.setPrefWidth(500);
+    progressBar.setPrefHeight(10.0);
+    ```
 
 * 设置不确定进度`progressBar.setProgress(ProgressBar.INDETERMINATE_PROGRESS);`
 
-#### ProgressIndicator
+## ProgressIndicator
 
 * 设置进度圈`ProgressIndicator progressIndicator = new ProgressIndicator(0.5);`
 * 设置进度`progressIndicator.setProgress(0.5);`
 * 设置长度宽度
 
-```java
-// 这两个设置在Jdk11中无效
-progressIndicator.setPrefWidth(500);
-progressIndicator.setPrefHeight(10.0);
-```
+    ```java
+    // 这两个设置在Jdk11中无效
+    progressIndicator.setPrefWidth(500);
+    progressIndicator.setPrefHeight(10.0);
+    ```
 
 * 设置不确定进度==默认==`progressBar.setProgress(ProgressBar.INDETERMINATE_PROGRESS);`
 
-#### 控制
+## 控制
 
 1. 创建一个按钮
 
@@ -87,42 +93,4 @@ progressIndicator.setPrefHeight(10.0);
     scheduledService.start();
     ```
 
-
-
 ![](../assets/VeryCapture_20220520115121.gif)
-
-##### IDEA中JDK11中运行JavaFx
-
-1. 设置项目Java语言版本为11
-
-2. 设置项目SDK为11
-
-3. 添加JavaFx的依赖Jar包
-
-4. 添加运行配置VM options
-
-	```properties
-	
-    --module-path "E:\DevelopEnvironment\Jar\openjfx-11.0.2\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
-```
-
-5.  或者直接拷贝下方代码，复制到项目目录下的`.idea\runConfigurations\`目录下，其中需要修改某些配置
-
-    ```xml
-    <component name="ProjectRunConfigurationManager">
-        <configuration default="false" name="在Java11中运行JavaFx需要添加运行参数" type="Application" factoryName="Application">
-            <option name="MAIN_CLASS_NAME" value="com.reine.Main" />
-            <module name="lesson46" />
-            <option name="VM_PARAMETERS" value="--module-path "E:\DevelopEnvironment\Jar\openjfx-11.0.2\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml" />
-            <extension name="coverage">
-                <pattern>
-                    <option name="PATTERN" value="com.reine.*" />
-                    <option name="ENABLED" value="true" />
-                </pattern>
-            </extension>
-            <method v="2">
-                <option name="Make" enabled="true" />
-            </method>
-        </configuration>
-    </component>
-    ```
